Fix trashbin icon overflow and refactor Trashbin component with React hooks

--- a/src/styles/components/header/trashbin.module.scss
+++ b/src/styles/components/header/trashbin.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
   svg {
-    overflow: visible;
+    overflow: visible !important;
   }
 }
